--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,16 +4,21 @@ version: '3.1'
 services:
 
   db:
-    image: postgres
+    container_name: postgres
+    image: postgres:latest
     restart: always
     environment:
-      POSTGRES_USER: user
+      POSTGRES_DB: user_db
+      POSTGRES_USER: bipen
       POSTGRES_PASSWORD: mypassword
-
-  adminer:
-    image: adminer
-    restart: always
     ports:
       - 5432:5432
-  volumes: 
-      - dbdata:/var/lib/postgresql/data    
+    volumes: 
+      - dbdata:/var/lib/postgresql/data  
+
+  # adminer:
+  #   image: adminer
+  #   restart: always
+    
+volumes:
+  dbdata:  # create the volume for persisting data.        
